# user_mgmt

./: README.md
user_mgmt/: .env  .gitignore  Cargo.toml
user_mgmt/src/: app.rs  db.rs  handlers.rs  main.rs  models.rs
